# BordaAcademy2022RTOS

./: CMakeLists.txt  ListenerThread.c  ListenerThread.h  README.md
src/: BlockThread.c  BlockThread.h  CMakeLists.txt  ListenerThread.c  ListenerThread.h  StreamThread.c  StreamThread.h  main.c
